[B] Fix alignment of project updated notification
[Delivers #114706759]

--- a/client/src/theme/Components/browse/project-list/_grid-project.scss
+++ b/client/src/theme/Components/browse/project-list/_grid-project.scss
@@ -155,7 +155,6 @@
       height: 7px;
       margin-right: 5px;
       margin-bottom: 2px;
-      margin-left: -12px;
       color: $neutralWhite;
       background-color: $sp40Tertiary;
       border-radius: 50%;
